fixed button cutoff.. again

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@
   justify-content: center;
   align-items: center;
   z-index: 10;
+  box-sizing: border-box;
   background: radial-gradient(circle at center, rgba(13, 15, 18, 0.8) 0%, rgba(13, 15, 18, 1) 100%);
 }
 
